tests/typechecker/pass/017-xor.hyg
true xor true;
(5 = 1) xor (1 < 3);
false xor (true xor false);
true and false xor false
