tests/typechecker/fail/017-xor.hyg
1 xor true;
5.1f xor 100;
true and false xor 100
